2018-01-31-viewAdInformation: - Finished implementing viewing an ad in more details. -Fixed and added a feature for view ads list where if the description is too long, there will be ... that appears at the end.

--- a/project/umbuy/web/src/app/view-ads/view-ads.component.scss
+++ b/project/umbuy/web/src/app/view-ads/view-ads.component.scss
@@ -20,12 +20,11 @@ img{
     height:200px;
     float:right;
     margin-top: 5px;
-    margin-right: -80px;
+    margin-right: -65px;
 }
 
-.fa-tags{
-    position: relative;
-    left: 100%;
+#displayPrice{
+    margin-right: -20px;
 }
 
 #adDescription{
